--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.opencv</groupId>
+			<artifactId>opencv</artifactId>
+			<version>4.10.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -59,5 +64,14 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>lib</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>**/*.dll</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 </project>
