--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<slf4j-api.version>2.0.13</slf4j-api.version>
 		<slf4j-log4j12.version>2.0.13</slf4j-log4j12.version>
 		<log4j.version>1.2.17</log4j.version>
+		<opencv.version>4.10.0</opencv.version>
 		<assembly.plugin.version>3.7.1</assembly.plugin.version>
 	</properties>
 	<dependencies>
@@ -31,6 +32,11 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.opencv</groupId>
+			<artifactId>opencv</artifactId>
+			<version>${opencv.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -41,7 +47,7 @@
 					<appendAssemblyId>false</appendAssemblyId>
 					<archive>
 						<manifest>
-							<mainClass>org.psp.Recognition</mainClass>
+							<mainClass>org.psp.recognition.Recognition</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
