--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<opencv.version>4.10.0</opencv.version>
 		<assembly.plugin.version>3.7.1</assembly.plugin.version>
+		<maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -64,6 +65,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>${maven-antrun-plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<configuration>
+							<target>
+								<copy file="target/${project.artifactId}-${project.version}.jar" tofile="${project.artifactId}.jar"/>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 	</build>
 </project>
