File storage is implemented

--- a/rec_log.properties
+++ b/rec_log.properties
@@ -1,9 +1,10 @@
 # log4j.rootLogger=ERROR, REC_OUT
 
-log4j.logger.org.psp=DEBUG, REC_OUT
-log4j.logger.org.psp.recognition.fs.FSFileNameFilter=INFO, REC_OUT
-log4j.logger.org.psp.recognition.fs.FSDirectory=INFO, REC_OUT
+# log4j.logger.org.psp=INFO, REC_OUT
+# log4j.logger.org.psp.recognition.fs.FSFileNameFilter=INFO, REC_OUT
+log4j.logger.org.psp.recognition.fs.FSDirectory=DEBUG, REC_OUT
 # log4j.logger.org.psp.recognition.fs=INFO, REC_OUT
+log4j.logger.org.psp.recognition.recobject=DEBUG, REC_OUT
 log4j.appender.REC_OUT=org.apache.log4j.ConsoleAppender
 log4j.appender.REC_OUT.Target=System.out
 log4j.appender.REC_OUT.layout=org.apache.log4j.PatternLayout
