--- a/recognition.ini
+++ b/recognition.ini
@@ -1,3 +1,7 @@
 [directory]
 work=C:\\PSP\\Photos_test
 resource=src\\main\\resources
+[destination]
+; FaceDetection.destinationType=screen
+FaceDetection.destinationType=file
+FaceDetection.destination=face_detection
