--- a/recognition.ini
+++ b/recognition.ini
@@ -1,7 +1,15 @@
 [directory]
 work=C:\\PSP\\Photos_test
 resource=src\\main\\resources
+[detection]
+; FaceDetection=on
+FaceDetection=off
+TestRecObject=on
+; TestRecObject=off
 [destination]
 ; FaceDetection.destinationType=screen
 FaceDetection.destinationType=file
 FaceDetection.destination=face_detection
+TestRecObject.destinationType=screen
+; TestRecObject.destinationType=file
+TestRecObject.destination=face_detection
