--- a/recognition.ini
+++ b/recognition.ini
@@ -2,10 +2,10 @@
 work=C:\\PSP\\Photos_test
 resource=src\\main\\resources
 [detection]
-FaceDetection=on
-; FaceDetection=off
-; TestRecObject=on
-TestRecObject=off
+; FaceDetection=on
+FaceDetection=off
+TestRecObject=on
+; TestRecObject=off
 [destination]
 ; FaceDetection.destinationType=screen
 FaceDetection.destinationType=file
