--- a/rec_log.properties
+++ b/rec_log.properties
@@ -2,8 +2,9 @@
 
 # log4j.logger.org.psp=INFO, REC_OUT
 # log4j.logger.org.psp.recognition.fs.FSFileNameFilter=INFO, REC_OUT
-log4j.logger.org.psp.recognition.fs.FSDirectory=DEBUG, REC_OUT
-# log4j.logger.org.psp.recognition.fs=INFO, REC_OUT
+# log4j.logger.org.psp.recognition.fs.FSDirectory=DEBUG, REC_OUT
+# log4j.logger.org.psp.recognition.fs.FSFile=DEBUG, REC_OUT
+log4j.logger.org.psp.recognition.fs=DEBUG, REC_OUT
 log4j.logger.org.psp.recognition.recobject=DEBUG, REC_OUT
 log4j.appender.REC_OUT=org.apache.log4j.ConsoleAppender
 log4j.appender.REC_OUT.Target=System.out
