--- a/recognition.ini
+++ b/recognition.ini
@@ -2,14 +2,15 @@
 work=C:\\PSP\\Photos_test
 resource=src\\main\\resources
 [detection]
-FaceDetection=on
-; FaceDetection=off
+; FaceDetection=on
+FaceDetection=off
 ; TestRecObject=on
 TestRecObject=off
+TestYolo=on
+; TestYolo=off
 [destination]
 ; FaceDetection.destinationType=screen
 FaceDetection.destinationType=file
 FaceDetection.destination=face_detection
 TestRecObject.destinationType=screen
-; TestRecObject.destinationType=file
-TestRecObject.destination=face_detection
+TestYolo.destinationType=screen
