First test passed

--- a/recognition.ini
+++ b/recognition.ini
@@ -1,6 +1,6 @@
 [directory]
 work=C:\\PSP\\Photos_test
-resource=src\\main\\resources
+resource=resources
 [detection]
 ; FaceDetection=on
 FaceDetection=off
@@ -13,4 +13,5 @@ TestYolo=on
 FaceDetection.destinationType=file
 FaceDetection.destination=face_detection
 TestRecObject.destinationType=screen
-TestYolo.destinationType=screen
+TestYolo.destinationType=file
+TestYolo.destination=test_yolo_detection
