YOLO 8 is tested

--- a/recognition.ini
+++ b/recognition.ini
@@ -6,12 +6,15 @@ resource=resources
 FaceDetection=off
 ; TestRecObject=on
 TestRecObject=off
-TestYolo=on
-; TestYolo=off
+; TestYolo=on
+TestYolo=off
+TestYoloV8=on
+; TestYoloV8=off
 [destination]
-; FaceDetection.destinationType=screen
 FaceDetection.destinationType=file
 FaceDetection.destination=face_detection
 TestRecObject.destinationType=screen
 TestYolo.destinationType=file
 TestYolo.destination=test_yolo_detection
+TestYoloV8.destinationType=file
+TestYoloV8.destination=test_yolo_detection
