--- a/rec_log.properties
+++ b/rec_log.properties
@@ -1,11 +1,12 @@
 # log4j.rootLogger=ERROR, REC_OUT
 
-# log4j.logger.org.psp=INFO, REC_OUT
+# log4j.logger.org.psp.recognition=DEBUG, REC_OUT
 # log4j.logger.org.psp.recognition.fs.FSFileNameFilter=INFO, REC_OUT
 # log4j.logger.org.psp.recognition.fs.FSDirectory=DEBUG, REC_OUT
 # log4j.logger.org.psp.recognition.fs.FSFile=DEBUG, REC_OUT
-log4j.logger.org.psp.recognition.fs=DEBUG, REC_OUT
-log4j.logger.org.psp.recognition.recobject=DEBUG, REC_OUT
+# log4j.logger.org.psp.recognition.fs=DEBUG, REC_OUT
+log4j.logger.org.psp.recognition.recobject=INFO, REC_OUT
+# log4j.logger.org.psp.recognition.recobject.TestYoloV8=DEBUG, REC_OUT
 log4j.appender.REC_OUT=org.apache.log4j.ConsoleAppender
 log4j.appender.REC_OUT.Target=System.out
 log4j.appender.REC_OUT.layout=org.apache.log4j.PatternLayout
